<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPasswordActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCareMM"
                android:textSize="34sp"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/the_caremm"
                android:textColor="@color/colorPrimary"
                android:shadowColor="@color/colorShadow"
                android:shadowDy="3"
                android:shadowRadius="1"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvPatientApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_app"
                android:layout_below="@id/tvCareMM"
                android:textSize="18sp"
                android:layout_marginStart="30dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/poppins_regular"
                android:shadowColor="@color/colorShadow"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="9sp"
                android:shadowDy="3"
                android:shadowRadius="1"/>
            <ImageView
                android:id="@+id/ivPath"
                android:layout_width="350dp"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                android:src="@drawable/path"
                android:layout_marginTop="-55dp"
                android:layout_marginEnd="-70dp"
                android:layout_alignParentEnd="true"/>
            <com.padcx.doctor.views.components.CustomImageView
                android:id="@+id/ivProfile"
                android:layout_width="92dp"
                android:layout_height="92dp"
                app:cornerRadius="46dp"
                android:layout_below="@id/tvPatientApp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/doctor"/>
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_below="@id/ivProfile"
                android:fontFamily="@font/poppins_medium"/>
            <TextView
                android:id="@+id/tvEnterPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_password"
                android:textSize="14sp"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/poppins_regular"
                android:layout_below="@id/tvName"
                android:layout_marginStart="30dp"
                android:layout_marginTop="19dp"/>
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:layout_marginTop="13dp"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:layout_below="@id/tvEnterPassword"
                android:backgroundTint="@color/colorGrayLight"
                android:background="@drawable/rounded_edit_text"/>
            <TextView
                android:id="@+id/tvRetypePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/colorGray"
                android:text="@string/retype_password"
                android:layout_below="@id/etPassword"
                android:layout_marginStart="30dp"
                android:layout_marginTop="13dp"/>
            <EditText
                android:id="@+id/etRetypePassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textSize="16sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/rounded_edit_text"
                android:backgroundTint="@color/colorGrayLight"
                android:layout_below="@id/tvRetypePassword"
                android:layout_marginTop="13dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:layout_marginTop="30dp"
                app:cornerRadius="10dp"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_regular"
                android:layout_below="@id/etRetypePassword"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/confirm"/>
            <ImageView
                android:id="@+id/ivEllipse"
                android:src="@drawable/ellipse"
                android:layout_below="@id/btnConfirm"
                android:layout_marginTop="80dp"
                android:layout_marginStart="-70dp"
                android:layout_marginBottom="-100dp"
                android:layout_width="250dp"
                android:layout_height="200dp"/>
            <TextView
                android:id="@+id/tvHaveAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:lineSpacingExtra="7sp"
                android:text="@string/have_acc"
                android:textColor="@color/black"
                android:layout_below="@id/btnConfirm"
                android:layout_marginTop="116dp"
                android:layout_marginBottom="25dp"
                android:layout_toStartOf="@id/tvLogin"
                android:fontFamily="@font/poppins_regular"/>
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="14sp"
                android:layout_below="@id/btnConfirm"
                android:layout_marginTop="116dp"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorPrimary"
                />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>