<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="18.4dp"
                android:layout_height="18.4dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/arrow_down_short"/>
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="3sp"
                android:textColor="@color/colorTextBold"
                android:fontFamily="@font/raleway_regular"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/fill_form"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar">
        <RelativeLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="17dp"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_name"/>
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@id/tvName"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/colorGrayLight"
                android:background="@drawable/rounded_edit_text"/>
            <TextView
                android:id="@+id/tvDob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@id/etName"
                android:layout_marginTop="9dp"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_dob"/>
            <LinearLayout
                android:id="@+id/llDob"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_below="@id/tvDob">
                <EditText
                    android:id="@+id/etDay"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:drawablePadding="32dp"
                    android:paddingEnd="14dp"
                    android:paddingStart="14dp"
                    android:textAlignment="center"
                    android:text="30"
                    android:drawableEnd="@drawable/ios_arrow_dropdown"
                    android:background="@drawable/rounded_edit_text"
                    android:backgroundTint="@color/colorGrayLight"/>
                <EditText
                    android:id="@+id/etMonth"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:drawablePadding="32dp"
                    android:paddingEnd="14dp"
                    android:paddingStart="14dp"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:text="Dec"
                    android:drawableEnd="@drawable/ios_arrow_dropdown"
                    android:background="@drawable/rounded_edit_text"
                    android:backgroundTint="@color/colorGrayLight"/>
                <EditText
                    android:id="@+id/etYear"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:drawablePadding="32dp"
                    android:paddingEnd="14dp"
                    android:paddingStart="14dp"
                    android:textAlignment="center"
                    android:text="1997"
                    android:layout_marginStart="8dp"
                    android:drawableEnd="@drawable/ios_arrow_dropdown"
                    android:background="@drawable/rounded_edit_text"
                    android:backgroundTint="@color/colorGrayLight"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="17dp"
                android:layout_below="@id/llDob"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_phone"/>
            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@id/tvPhoneNumber"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="6dp"
                android:inputType="phone"
                android:backgroundTint="@color/colorGrayLight"
                android:background="@drawable/rounded_edit_text"/>
            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="17dp"
                android:layout_below="@id/etPhoneNumber"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_gender"/>
            <RadioGroup
                android:id="@+id/rdGender"
                android:layout_below="@id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp">

                    <RadioButton
                        android:id="@+id/rbtnMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myan_male"
                        android:paddingStart="13dp"
                        android:checked="true"
                        android:layout_marginEnd="90dp"
                        android:paddingEnd="13dp"/>
                    <RadioButton
                        android:id="@+id/rbtnFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myan_female"
                        android:paddingStart="13dp"
                        android:paddingEnd="13dp"/>
            </RadioGroup>
            <TextView
                android:id="@+id/tvSpeciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="17dp"
                android:layout_below="@id/rdGender"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_speciality"/>
            <Spinner
                android:id="@+id/spinnerSpeciality"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@id/tvSpeciality"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="6dp"
                android:pointerIcon="arrow"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@drawable/rounded_edit_text"
                android:backgroundTint="@color/colorGrayLight"
                android:entries="@array/specialities"/>
            <TextView
                android:id="@+id/tvExperience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="17dp"
                android:layout_below="@id/spinnerSpeciality"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_exp"/>
            <EditText
                android:id="@+id/etExperience"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@id/tvExperience"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="6dp"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:backgroundTint="@color/colorGrayLight"
                android:background="@drawable/rounded_edit_text"/>
            <TextView
                android:id="@+id/tvExperienceUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myan_exp_unit"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:layout_below="@id/tvExperience"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/tvCertificate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="17dp"
                android:layout_below="@id/etExperience"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_certificate"/>
            <EditText
                android:id="@+id/etCertificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="6"
                android:minLines="4"
                android:inputType="textMultiLine"
                android:layout_below="@id/tvCertificate"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/colorGrayLight"
                android:background="@drawable/rounded_edit_text"/>
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="17dp"
                android:layout_below="@id/etCertificate"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_description"/>
            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_below="@id/tvDescription"
                android:layout_marginStart="15dp"
                android:maxLines="8"
                android:minLines="5"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/colorGrayLight"
                android:background="@drawable/rounded_edit_text"/>
            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="17dp"
                android:layout_below="@id/etDescription"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="24dp"
                android:text="@string/myan_address"/>
            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_below="@id/tvAddress"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="6dp"
                android:maxLines="6"
                android:minLines="4"
                android:backgroundTint="@color/colorGrayLight"
                android:background="@drawable/rounded_edit_text"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                app:cornerRadius="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="33dp"
                android:layout_marginBottom="28dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/create_account"
                android:layout_below="@id/etAddress"/>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>