<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/cvConsultRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvRequestTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="17sp"
                android:layout_marginTop="11dp"
                android:layout_marginStart="11dp"
                android:text="@string/myan_consult_request"
                android:textColor="@color/colorTextBold"/>
            <TextView
                android:id="@+id/tvPatientStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:paddingTop="3dp"
                android:fontFamily="@font/poppins_semibold"
                android:paddingBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/colorYellow"
                android:background="@drawable/rounded_text_view"
                android:text="@string/myan_consulted_patient"/>
            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tvRequestTitle"
                android:background="@color/colorLineGray"/>
            <com.padcx.doctor.views.components.CustomImageView
                android:id="@+id/ivPatient"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cornerRadius="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="17dp"
                android:layout_below="@id/tvRequestTitle"
                android:src="@drawable/photo"/>
            <TextView
                android:id="@+id/tvPatientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:fontFamily="@font/poppins_medium"
                android:layout_below="@id/line"
                android:layout_marginTop="24dp"
                android:layout_toEndOf="@id/ivPatient"
                android:layout_marginStart="37dp"
                android:text="Aung Aung"
                android:textColor="@color/colorTextBold"/>
            <TextView
                android:id="@+id/tvPatientBod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ivPatient"
                android:layout_marginStart="37dp"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/colorGreen"
                android:text="မွေးနေ့ : 23 Nov 1997"
                android:layout_below="@id/tvPatientName"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLater"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/ivPatient"
                android:layout_marginStart="10dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="@color/colorCyan"
                android:text="@string/myan_later"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPickTime"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/ivPatient"
                android:layout_marginStart="10dp"
                android:layout_marginTop="28dp"
                android:layout_toEndOf="@id/btnLater"
                android:backgroundTint="@color/colorOrange"
                android:text="@string/myan_choose_time"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/ivPatient"
                android:layout_marginTop="28dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/colorBlue"
                android:text="@string/myan_accept"
                android:layout_marginBottom="18dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>